--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,27 +1,13 @@
-.Navigation {
-  height: 56px;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: transparent;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 40px;
-  box-sizing: border-box;
-  z-index: 90;
-}
-
 .TopBar {
   position: fixed;
   width: 100%;    
-  z-index: 1;
+  /* z-index: 1; */
   display: flex;
   align-items: center;
-  height: 70px;
+  height: 10vh;
   box-sizing: border-box;
   padding: 0 60px;
+  background-color: white;
 }
 
 .TopBar.scrolled {
