--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,10 +1,6 @@
 .Content {
   height: 1000px;
-  /* background-image: url('../../assets/img/background-img.jpg'); */
+  position: relative;
+  top: 70px;
 }
 
-.Content h2 {
-  margin-top: 60px;
-  font-size: 36px;
-  font-weight: lighter;
-}
