--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -1,33 +1,61 @@
 .Landing {
-    display: flex;
-    border:1px solid black;
-    background-color: #ddd;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ae84d9;
+
+  height: 90vh;
+}
+
+.Landing button {
+  border-radius: 16px;
+  border: 0;
+  justify-content: center;
+  width: 18em;
+  font-size: 1em;
+  padding: 9px 20px;
+  color: white;
+  background-color: #5e5de4;
 }
 
 .TopHalf {
-    padding: 10% 0 0 10%;
-    text-align: left;
-    height: 45vh;
+  background-color: #eee;
+  background-image: url("../../assets/img/awan.png"),
+    url("../../assets/img/awan2.png");
+  background-position: bottom right, top left;
+  background-repeat: no-repeat;
+  background-size: 50%, 30px;
+  padding: 5% 0 5% 10%;
+  text-align: left;
 }
 
 .TopHalf strong {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .TopHalf p {
-    white-space: pre-line;
-    line-height: 2em;
+  white-space: pre-line;
+  line-height: 2em;
 }
 
 .TopHalf button {
-    border-radius: 16px;
-    border: 0;
-    justify-content: center;
-    width: 70%;
-    font-size: 16px;
-    padding: 9px;
-    color: white;
-    background-color: #5e5de4;
 }
 
+.BottomHalf {
+  background-color: white;
+}
 
+.Features {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style: none;
+  padding: 0;
+}
+
+.Features h3 {
+  width: 100vw;
+}
+
+.Features li {
+  width: 100%;
+}
