--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -67,7 +67,8 @@
   align-items: left;
   display: flex;
   flex-direction: row;
-  padding: 60px;
+  padding: 60px 0 60px 60px;
+  justify-content: space-between;
 }
 
 .User ul,
@@ -87,4 +88,15 @@
 .User .Left li {
   /* display: flex;
     align-items: left; */
+}
+
+.User .Right {
+  display: inline;
+  margin: 0;
+}
+
+.User .Right img {
+  max-height: 200px;
+  max-width: 200px;
+  object-fit: cover;
 }
