--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -6,14 +6,14 @@
 }
 
 .Landing button {
-  border-radius: 16px;
+  /* border-radius: 16px;
   border: 0;
   justify-content: center;
   width: 18em;
   font-size: 1em;
   padding: 9px 20px;
   color: white;
-  background-color: #5e5de4;
+  background-color: #5e5de4; */
 }
 
 .TopHalf {
@@ -47,7 +47,8 @@
 
 .Features {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: column; */
+  /* flex-wrap: wrap; */
   justify-content: space-evenly;
   list-style: none;
   padding: 0;
@@ -59,11 +60,19 @@
 
 .Features li {
   width: 100%;
+  justify-content: center;
+  display: flex;
+}
+
+.Feature {
+  width: 33%;
 }
 
 .User,
 .Host {
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
+  background-color: var(--clr-primary-300);
+  font-family: var(--ff-primary);
   align-items: left;
   display: flex;
   flex-direction: row;
@@ -76,27 +85,37 @@
   list-style: none;
 }
 
-.User .Left {
-  text-align: left;
-  margin: 0 60px;
+.User li,
+.Host li {
+  margin: 50px 0;
 }
 
-.User .Left ul {
+:is(.User, .Host) li :is(h3, p) {
+  margin: 0;
+}
+
+.User .Benefits {
+  text-align: left;
+  padding: 10em;
+}
+
+.User .Benefits ul {
   padding: 0;
 }
 
-.User .Left li {
+.User .Benefits li {
   /* display: flex;
     align-items: left; */
 }
 
-.User .Right {
+.User .Screenshot {
   display: inline;
   margin: 0;
+  width: 50%;
 }
 
-.User .Right img {
-  max-height: 200px;
-  max-width: 200px;
+.User .Screenshot img {
+  /* max-height: 200px; */
+  max-width: 100%;
   object-fit: cover;
 }
