--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
 .App {
   text-align: center;
+
+  font-family: var(--ff-primary);
+}
+
+:root {
+  --clr-primary-300: #f2f2f2;
+
+  --ff-primary: "open sans", sans-serif;
+}
+
+:root button {
+  border-radius: 16px;
+  border: 0;
+  justify-content: center;
+  width: 18em;
+  font-size: 1em;
+  padding: 9px 20px;
+  color: white;
+  background-color: #5e5de4;
 }
