--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@
   justify-content: center;
   width: 18em;
   font-size: 1em;
-  padding: 0.8em 1.7em;
+  padding: 0 1.7em;
+  height: 2em;
   box-sizing: border-box;
   color: white;
   background-color: #5e5de4;
