--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,4 +1,10 @@
 .Content {
   /* position: relative; */
   top: 70px;
+  /* overflow: auto; */
+  /* height: 100%; */
+}
+
+.Container {
+  /* overflow: auto; */
 }
