--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   margin-top: 70px;
-  height: 90vh;
 }
 
 .Landing button {
@@ -120,8 +119,24 @@
   object-fit: cover;
 }
 
-.Recommended .Webinars {
+.Recommended {
   background-color: var(--clr-primary-300);
+}
+
+.Recommended h2 {
+  text-align: left;
+  margin: 0 0 2em 4em;
+}
+
+.Recommended .Webinars {
+  background-color: white;
   padding: 2em;
   display: flex;
+  justify-content: center;
+}
+
+.LineBreak {
+  width: 100%;
+  height: 4em;
+  background-color: var(--clr-primary-300);
 }
