--- a/src/components/Pages/Landing/Landing.module.css
+++ b/src/components/Pages/Landing/Landing.module.css
@@ -17,8 +17,8 @@
 
 .TopHalf {
   background-color: #f2f2f2;
-  background-image: url("../../assets/img/awan.png"),
-    url("../../assets/img/awan2.png");
+  background-image: url("../../../assets/img/awan.png"),
+    url("../../../assets/img/awan2.png");
   background-position: bottom right, top left;
   background-repeat: no-repeat;
   background-size: 50%, 30px;
