--- a/src/containers/Webinar/Webinar.module.css
+++ b/src/containers/Webinar/Webinar.module.css
@@ -6,7 +6,8 @@
   width: 25em;
   /* height: 25em; */
 
-  margin: 2em 1em 2em 1em;
+  margin: 0 1em 2em 1em;
+  border-radius: 5%;
 }
 
 .UpperPart {
