--- a/src/components/Navigation/SideBar/SideItem/SideItem.module.css
+++ b/src/components/Navigation/SideBar/SideItem/SideItem.module.css
@@ -1,9 +1,9 @@
 .SideItem {
   display: flex;
-  margin: 0 0 0.5em 0;
+  margin: 0 0 0.3em 0;
 }
 
-img {
+.SideItem img {
   object-fit: contain;
   max-width: 1.5em;
   margin-right: 1em;
