--- a/src/components/Pages/Landing/Landing.module.css
+++ b/src/components/Pages/Landing/Landing.module.css
@@ -120,7 +120,11 @@
 }
 
 .Recommended {
-  background-color: var(--clr-primary-300);
+  /* background-color: var(--clr-primary-300); */
+  margin: auto;
+  /* margin-top: 2.5em; */
+  margin-bottom: 4em;
+  width: 90%;
 }
 
 .Recommended h2 {
@@ -128,11 +132,7 @@
   margin: 0 0 2em 4em;
 }
 
-.Recommended .Webinars {
-  background-color: white;
-  padding: 2em;
-  display: flex;
-  justify-content: center;
+.Webinars {
 }
 
 .LineBreak {
