--- a/src/containers/Pages/Home/Home.module.css
+++ b/src/containers/Pages/Home/Home.module.css
@@ -31,9 +31,13 @@
   margin: 0;
 }
 
-.BottomHalf {
-  /* background-color: #ccc; */
+.Slider {
+  margin: auto;
+  margin-top: 2.5em;
+  width: 90%;
+  /* background-color: black; */
 }
+
 .Footer {
   margin: 6em 0;
 }
