--- a/src/components/Pages/Landing/slick-theme.css
+++ b/src/components/Pages/Landing/slick-theme.css
@@ -18,3 +18,15 @@ body .slick-next:before {
 .slick-dots {
   bottom: 25px;
 }
+
+.slick-track {
+  display: flex !important;
+}
+
+.slick-slide {
+  height: inherit !important;
+}
+
+.slick-slide > div {
+  height: 100%;
+}
